# agent-practice

./: .env  .env.example  .gitignore  Dockerfile  IO_DESIGN_ANALYSIS.md  Makefile  README.md  deploy.sh  docker-compose.yml  init-selfsigned-ssl.sh  init-ssl.sh  main.py  prd.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  server.py  version.json
.codebuddy/: rules.md
.codebuddy/integration/: lighthouse.json
.github/workflows/: ci.yml  deploy.yml
data/: portfolio.json
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ROADMAP.md  TECHNICAL.md  design.md
docs/plans/: 2026-03-31-fund-assistant-design.md  2026-04-02-trading-and-auto-invest-design.md  2026-04-09-input-design.md
nginx/: nginx.conf
src/: config.py  formatter.py  graph.py  state.py
src/agents/: analysis_agent.py  briefing_agent.py  market_agent.py  portfolio_agent.py
src/core/: __init__.py  auth.py  exceptions.py  logging.py  rate_limit.py  scheduler.py
src/database/: __init__.py  engine.py  migrate.py  models.py  repositories.py
src/models/: schemas.py
src/routes/: __init__.py  briefing.py  config.py  diagnosis.py  estimation.py  portfolio.py  push.py  system.py
src/tools/: common.py  data_provider.py  fund_estimation.py  fund_name.py  fund_nav.py  fund_profile.py  market_tools.py  news_tools.py  nlp_input.py  ocr_tools.py  portfolio_tools.py  push_tools.py  sector.py
src/utils/: estimation_utils.py  holdings_utils.py  json_utils.py
tests/: test_nav_history.py  test_p0_p3_optimizations.py  test_p4_confirm_flow.py  test_trading_logic.py
tests/integration/: conftest.py  test_config_api.py  test_estimation_api.py  test_portfolio_api.py  test_push_api.py  test_system_api.py
tests/unit/: test_auth.py  test_circuit_breaker.py  test_config.py  test_database.py  test_formatter.py  test_json_utils.py  test_rule_engine.py
web/: index.html  index.vite.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  store.ts  types.ts  utils.ts
web/src/__tests__/: api.test.ts  briefingStore.test.ts  portfolioStore.test.ts  tradeStore.test.ts
web/src/components/: BottomInputBar.tsx  BriefingArea.tsx  ConfirmDrawer.tsx  FundCard.tsx  Header.tsx  InvestDrawer.tsx  InvestList.tsx  SettingsDrawer.tsx  SortBar.tsx  TabBar.tsx  Toast.tsx  TradeDrawer.tsx
web/src/hooks/: useBodyScrollLock.ts  useToast.ts
web/src/pages/: BriefingPage.tsx  DiagnosisPage.tsx  PortfolioPage.tsx  ProfilePage.tsx
web/src/stores/: briefingStore.ts  portfolioStore.ts  tradeStore.ts
web/src/styles/: global.css
web/src/styles/components/: bottom-input.css  drawer.css  fund-card.css  header.css  sort-bar.css
web/src/styles/pages/: briefing.css  profile.css  (+2 more)
